# PLM-Based-Cas12a-Shuffling-Model

./: .gitignore  AsCas12a.prot  FnCas12a.prot  LICENSE  LbCas12a.prot  Mb2Cas12a.prot  README.md  Sequence_Result.xlsx  pyproject.toml  requirements.txt  setup.cfg
cas12a_shuffling_model/configs/: default.yaml  smoke.yaml
cas12a_shuffling_model/data/active/: active_chimeras_reconstructed.csv
cas12a_shuffling_model/data/processed/: distill_teacher_scores_scored.csv  distill_teacher_scores_smoke.csv  domain_candidates_topk.csv  domain_translation_qc.csv  teacher_scores.sqlite  validated_domain_peptides.csv  validated_domain_peptides.json
cas12a_shuffling_model/outputs/runs/20260220_192317/: RUN_NOTES.md
cas12a_shuffling_model/outputs/runs/20260221_125422/: RUN_NOTES.md
cas12a_shuffling_model/outputs/runs/20260221_130645/: RUN_NOTES.md
cas12a_shuffling_model/outputs/student/run_1771643758/: metrics_summary.json  student_best.pt  student_last.pt  train_history.csv
cas12a_shuffling_model/outputs/student/run_1771643827/: metrics_summary.json  student_best.pt  student_last.pt  train_history.csv
cas12a_shuffling_model/src/cas12a_shuffling_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cas12a_shuffling_model/src/cas12a_shuffling_model/calibration/: calibrator.py  thresholds.py
cas12a_shuffling_model/src/cas12a_shuffling_model/cli/: build_distill_set.py  build_domains.py  calibrate.py  make_figures.py  rank_candidates.py  reconstruct_actives.py  score_student.py  score_teacher.py  train_student.py
cas12a_shuffling_model/src/cas12a_shuffling_model/domain/: align_validate.py  chimera_builder.py  translate_domains.py
cas12a_shuffling_model/src/cas12a_shuffling_model/io/: loaders.py
cas12a_shuffling_model/src/cas12a_shuffling_model/search/: combo_compact.py  rank_pipeline.py  sampler.py
cas12a_shuffling_model/src/cas12a_shuffling_model/student/: distill_dataset.py  gru_model.py  score_student.py  train_student.py  vocab.py
cas12a_shuffling_model/src/cas12a_shuffling_model/teacher/: junction_scoring.py  protgpt2_scorer.py  score_cache.py  scoring_utils.py
cas12a_shuffling_model/tests/: conftest.py  test_calibrator_and_rank.py  test_chimera_builder.py  test_combo_compact.py  test_domain_parsing.py  test_student_distill_dataset.py  test_student_scorer.py  test_teacher_cache_and_windows.py
domains/: As_01.dna  As_02.dna  As_03.dna  As_04.dna  As_05.dna  As_06.dna  As_07.dna  As_08.dna  As_09.dna  As_10.dna  As_11.dna  Fn_01.dna  Fn_02.dna  Fn_03.dna  Fn_04.dna  Fn_05.dna  Fn_06.dna  Fn_07.dna  Fn_08.dna  Fn_09.dna  Fn_10.dna  Fn_11.dna  Lb_01.dna  Lb_02.dna  Lb_03.dna  Lb_04.dna  Lb_05.dna  Lb_06.dna  Lb_07.dna  Lb_08.dna  Lb_09.dna  Lb_10.dna  Lb_11.dna  Mb_01.dna  Mb_02.dna  Mb_03.dna  Mb_04.dna  Mb_05.dna  Mb_06.dna  Mb_07.dna  (+4 more)
(+64 files in other folders)
