[metadata]
name = cas12a-shuffling-model
version = 0.1.0
description = PLM-guided ranking pipeline for Cas12a domain shuffling (teacher-student distillation)
long_description = file: cas12a_shuffling_model/README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = cas12a_shuffling_model/src
packages = find:
python_requires = >=3.9
install_requires =
    biopython>=1.85
    pandas>=2.3
    openpyxl>=3.1
    pyyaml>=6.0
    numpy>=1.26,<2.0
    rapidfuzz>=3.13
    torch>=2.2
    transformers>=4.40,<4.56

[options.packages.find]
where = cas12a_shuffling_model/src

[options.entry_points]
console_scripts =
    cas12a-build-domains=cas12a_shuffling_model.cli.build_domains:main
    cas12a-reconstruct-actives=cas12a_shuffling_model.cli.reconstruct_actives:main
    cas12a-score-teacher=cas12a_shuffling_model.cli.score_teacher:main
    cas12a-build-distill-set=cas12a_shuffling_model.cli.build_distill_set:main
    cas12a-train-student=cas12a_shuffling_model.cli.train_student:main
    cas12a-score-student=cas12a_shuffling_model.cli.score_student:main
    cas12a-calibrate=cas12a_shuffling_model.cli.calibrate:main
    cas12a-rank-candidates=cas12a_shuffling_model.cli.rank_candidates:main
    cas12a-make-figures=cas12a_shuffling_model.cli.make_figures:main
